lang/tests/compile_fail/event_unsupported_type.stderr
error: unsupported event field type `Vec`; only primitive integers, bool, and Address are supported
 --> tests/compile_fail/event_unsupported_type.rs:5:12
  |
5 |     pub x: Vec<u8>,
  |            ^^^^^^^
